upgraded semantic